Fixing change password

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
               <span class="close">&times;</span>
               <div class="form-group">
                 <form id="change-password">
+                  <input type="text" id="email-user" placeholder="Your Email" readonly>
                   <input type="password" name="passwords[old]" placeholder="Old Password">
                   <input type="password" name="passwords[new]" placeholder="New Password">
                   <button class="button button-block small" type='submit'> Change </button>
