--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1 class="title">Event Saver</h1>
+      <h1 class='deepshadow'>Event Saver</h1>
 
       <div id="message" class="alert alert-primary"></div>
       <div id="out">
@@ -25,7 +25,7 @@
 
           <div class="tab-content">
             <div id="signup">
-              <h1>Sign Up for Free</h1>
+              <h2>Sign Up for Free</h2>
 
               <form id="sign-up">
 
@@ -56,7 +56,7 @@
             </div>
 
             <div id="login">
-              <h1>Welcome Back!</h1>
+              <h2>Welcome Back!</h2>
 
               <form id="sign-in">
 
@@ -101,7 +101,7 @@
               <button class="button button-block" type='submit'> Sign IN </button>
             </form>
           </div>
-        </div> <!-- End of outside section--> -->
+        </div> <!-- End of outside section-->
 
         <div id='in' class="hide">
           <!-- change password -->
