--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
     <body>
       <h1 class='deepshadow'>Event Saver</h1>
-
-      <div id="message" class="alert alert-primary"></div>
+      <button class="button button-block" id="message"> </button>
+      <div></div>
       <div id="out">
             <div class="form">
 
@@ -210,10 +210,7 @@
               </div>
             </div> <!-- end of edit modal-->
           <button id="hide-all" class="button button-block small"> Hide all the Events</button>
-          </div>
-
-          <div>
-            <button class="button button-block small" id="get-all">Get all</button>
+          <button class="button button-block small" id="get-all">Get all</button>
           </div>
           <main>
             <div id="content" class="content hide"></div>
