Add guest login for guest user to check it.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <h1 class='deepshadow'>Event Saver</h1>
       <button class="button button-block" id="message"> </button>
       <div></div>
+
       <div id="out">
+        <div class="form">
+              <button  id="guest-login" class="button button-block" />Guest Login</button>
+        </div>
             <div class="form">
 
           <ul class="tab-group">
